bp-core/main/default/objects/Batter__c/Batter__c.object-meta.xml
<CustomObject>
    <label>Batter</label>
    <nameField>
        <label>Batter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>