bp-core/main/default/objects/Batter__c/fields/Balls_Thrown__c.field-meta.xml
<CustomField>
    <fullName>Balls_Thrown__c</fullName>
    <formula>Pitches_Thrown__c - Strikes_Thrown__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balls Thrown</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>