bp-core/main/default/objects/Batter__c/fields/Bats__c.field-meta.xml
<CustomField>
    <fullName>Bats__c</fullName>
    <label>Bats</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Right</fullName>
                <default>true</default>
                <label>Right</label>
            </value>
            <value>
                <fullName>Left</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>