bp-core/main/default/objects/Batter__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <formula>TEXT(Count_Balls__c) &amp; &quot;-&quot; &amp;  Text(Count_Strikes__c)</formula>
    <label>Count</label>
    <type>Text</type>
</CustomField>