bp-core/main/default/objects/Batter__c/fields/Count_Balls__c.field-meta.xml
<CustomField>
    <fullName>Count_Balls__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count Balls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>