bp-core/main/default/objects/Batter__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Bat</fullName>
                <default>true</default>
                <label>At Bat</label>
            </value>
            <value>
                <fullName>Base Hit</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Hit By Pitch</fullName>
            </value>
            <value>
                <fullName>Put Out</fullName>
            </value>
            <value>
                <fullName>Strikeout</fullName>
            </value>
            <value>
                <fullName>Walk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>