bp-core/main/default/objects/Batter__c/fields/Outing__c.field-meta.xml
<CustomField>
    <fullName>Outing__c</fullName>
    <label>Outing</label>
    <referenceTo>Outing__c</referenceTo>
    <relationshipLabel>Batters</relationshipLabel>
    <relationshipName>Batters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>