bp-core/main/default/objects/Batter__c/fields/Pitches_Thrown__c.field-meta.xml
<CustomField>
    <fullName>Pitches_Thrown__c</fullName>
    <label>Pitches Thrown</label>
    <summaryForeignKey>Pitch__c.Batter__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>