bp-core/main/default/objects/Batter__c/fields/Strikes_Thrown__c.field-meta.xml
<CustomField>
    <fullName>Strikes_Thrown__c</fullName>
    <label>Strikes Thrown</label>
    <summaryFilterItems>
        <field>Pitch__c.Is_Strike__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Pitch__c.Batter__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>